# labs

./: Header.h
ads/: 1.md  3.md  4.md  5.md  Bubble Sort.md  Insertion Sort.md  Merge Sort.md  Quick Sort.md
ads2/: 13-17.py  4-12.py
c++/l1/: CMakeLists.txt  Header.h  Source.cpp
c++/l2/: CMakeLists.txt  ConsoleApplication2.cpp
c++/l3/: CMakeLists.txt
c++/l4/: CMakeLists.txt  ConsoleApplication4.cpp
c++/l5/: CMakeLists.txt  ConsoleApplication5.cpp
c++/l6/: CMakeLists.txt  ConsoleApplication6.cpp
c++/l7/: CMakeLists.txt  ConsoleApplication7.cpp  input1.txt  input3.binf
c++/l8/: CMakeLists.txt  ConsoleApplication8.cpp
c++/l9/: CMakeLists.txt  ConsoleApplication9.cpp
lab1/: CMakeLists.txt  ConsoleApplication1.cpp  Source.cpp
lab2/: CMakeLists.txt
lab3/: CMakeLists.txt  ConsoleApplication3.cpp
lab4/: CMakeLists.txt  ConsoleApplication4.cpp
lab5/: CMakeLists.txt  ConsoleApplication5.cpp
lab6/: CMakeLists.txt  ConsoleApplication6.cpp
lab7/: CMakeLists.txt  ConsoleApplication7.cpp
lab8/: CMakeLists.txt  ConsoleApplication8.cpp
lab9/: CMakeLists.txt
python/: 10.py  2.py  3.py  4.py  5.py  6.py  9.py
web/l1/: 1.md  2.html
web/l2/: docker-compose.yml  site.conf
web/l2/2/: docker-compose.yml
web/l2/3/: site.conf
web/l3/: 1.php  10.php  11.php  12.php  2.php  3.php  4.php  5.php  6.php  7.php  8.php  9.php
web/l4/: 1.php  2.php  3.php
web/l4/4/: form.php  form.txt  profile.php  profile.txt
web/l5/: docker-compose.yml  site.conf
web/l5/code/: index.php  save.php
web/l6/: 1.php  2.php  3.php  4.php
web/l7/code/: index.php  (+2 more)
(+10 files in other folders)
